--- a/savory_mini_pies_project/styles.css
+++ b/savory_mini_pies_project/styles.css
@@ -14,9 +14,8 @@ body {
 .header {
   background-color: #ffb300;
   color: #333;
-  padding: 10px 0;
-  text-align: center;
   padding: 20px 0;
+  text-align: center;
   font-size: 26px;
 }
 
@@ -57,6 +56,9 @@ body {
   margin: 30px auto;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
 
 h2 {
@@ -102,5 +104,23 @@ h2 {
 }
 
 .our-values-section ul {
-  margin : 0 50px ;
+  margin: 0 50px;
+}
+
+.map-container {
+  margin-top: 20px;
+  text-align: center;
+}
+
+footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 10px 0;
+}
+
+.short-content-footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
