--- a/savory_mini_pies_project/styles.css
+++ b/savory_mini_pies_project/styles.css
@@ -14,14 +14,26 @@ body {
 .header {
   background-color: #ffb300;
   color: #333;
-  padding: 20px 0;
+  padding: 20x 0;
   text-align: center;
-  font-size: 26px;
+  font-size: 28px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.header h1 {
+  margin: 0;
 }
 
 .navbar {
   background-color: #333;
-  padding: 10px 0;
+  padding: 5px 0;
+  position: fixed;
+  top: 90px;
+  left: 0;
+  width: 100%;
 }
 
 .navbar ul {
@@ -53,12 +65,13 @@ body {
 
 .container {
   max-width: 1000px;
-  margin: 30px auto;
+  margin: 180px auto 30px;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
   flex: 1;
+  padding-top: 5px;
 }
 
 h2 {
