--- a/savory_mini_pies_project/styles.css
+++ b/savory_mini_pies_project/styles.css
@@ -17,9 +17,6 @@ body {
   padding: 20x 0;
   text-align: center;
   font-size: 28px;
-  position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
 }
 
@@ -30,9 +27,6 @@ body {
 .navbar {
   background-color: #333;
   padding: 5px 0;
-  position: fixed;
-  top: 90px;
-  left: 0;
   width: 100%;
 }
 
@@ -65,7 +59,7 @@ body {
 
 .container {
   max-width: 1000px;
-  margin: 180px auto 30px;
+  margin: 30px auto;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   display: flex;
@@ -121,8 +115,33 @@ h2 {
 }
 
 .map-container {
+  position: relative;
+  width: 100%;
   margin-top: 20px;
   text-align: center;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.map-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+@media (max-width: 600px) {
+  .map-container {
+    padding-top: 75%;
+  }
+}
+
+@media (min-width: 601px) {
+  .map-container {
+    padding-top: 56.25%;
+  }
 }
 
 footer {
@@ -130,6 +149,7 @@ footer {
   color: #fff;
   text-align: center;
   padding: 10px 0;
+  width: 100%;
 }
 
 .short-content-footer {
