--- a/savory_mini_pies_project/styles/styles.css
+++ b/savory_mini_pies_project/styles/styles.css
@@ -1,8 +1,8 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
-  box-sizing: border-box;
 }
 
 body {
@@ -47,9 +47,9 @@ body {
 }
 
 .navbar ul li a:hover {
-  color: black;
-  border: 2px solid black;
-  background-color: white;
+  color: #333;
+  border: 2px solid #333;
+  background-color: #fff;
   padding: 5px 10px;
   border-radius: 5px;
   font-weight: bold;
@@ -66,11 +66,98 @@ body {
   padding-top: 5px;
 }
 
+.picture-div-main {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.picture-div-main img {
+  margin: 0 auto;
+  text-align: center;
+  width: 350px;
+  height: 350px;
+  border-radius: 5%;
+  margin: 20px auto;
+}
+
+.check-menu {
+  text-align: center;
+  margin: 20px 0;
+  font-weight: bold;
+}
+
+.check-menu a {
+  text-decoration: none;
+  color: #ffb300;
+}
+
+.check-menu a:hover {
+  color: #333;
+  background-color: #ffb300;
+}
+
 h2 {
   text-align: left;
   margin: 20px 0;
   color: #ffb300;
   font-size: 24px;
+}
+
+.menu-div {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: 20px;
+}
+
+.menu-item {
+  margin: 20px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: left;
+  width: 300px;
+}
+
+.menu-item img {
+  display: block;
+  margin: 0 auto 20px;
+  width: 100%;
+  height: auto;
+  border-radius: 5%;
+  width: 350px;
+  height: 350px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
+}
+
+table th,
+table td {
+  border: 1px solid #ccc;
+  padding: 8px;
+  text-align: center;
+}
+
+table th {
+  background-color: #ffb300;
+  color: #fff;
+}
+
+@media (max-width: 768px) {
+  .menu-div {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .menu-item {
+    width: 90%;
+  }
 }
 
 .pictures-div {
@@ -150,8 +237,7 @@ footer {
   width: 100%;
 }
 
-.short-content-footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
+footer a {
+  color: #fff;
+  text-decoration: none;
 }
