--- a/savory_mini_pies_project/styles/styles.css
+++ b/savory_mini_pies_project/styles/styles.css
@@ -108,11 +108,12 @@ h2 {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  width: 100%;
 }
 
 .menu-item {
   margin: 20px;
-  padding: 20px;
+  padding: 20px 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -154,7 +155,7 @@ table th {
   }
 
   .menu-item {
-    width: 90%;
+    width: 95%;
   }
 }
 
