--- a/simple_calculator/styles.css
+++ b/simple_calculator/styles.css
@@ -1,13 +1,14 @@
 .container {
   display: block;
   width: fit-content;
-  padding: 30px;
+  padding: 20px;
   margin: 30px auto;
   border: 2px solid rgb(106, 189, 216);
 }
 
 form * {
   max-width: 500px;
+  min-width: 300px;
 }
 
 fieldset {
